--- a/requirements_deploy.txt
+++ b/requirements_deploy.txt
@@ -1,8 +1,10 @@
 streamlit>=1.28.0
-torch>=2.0.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.0.1+cpu
 numpy>=1.24.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
+joblib>=1.3.0
 google-generativeai>=0.3.0
 openai>=0.28.0
 requests>=2.31.0
