--- a/requirements_streamlit_cloud.txt
+++ b/requirements_streamlit_cloud.txt
@@ -17,7 +17,7 @@ scikit-learn>=1.3.0,<1.4.0
 joblib>=1.3.0,<1.4.0
 
 # AI服务提供商
-google-generativeai>=0.3.0,<0.4.0
+google-generativeai>=0.7.0
 openai>=0.28.0,<1.0.0
 
 # 网络请求
