优化AI模块依赖配置，确保Streamlit Cloud正确安装google-generativeai和openai

--- a/requirements_cloud.txt
+++ b/requirements_cloud.txt
@@ -1,12 +1,14 @@
 streamlit
-torch
-torchvision
-torchaudio
 numpy
 pandas
 scikit-learn
 joblib
-google-generativeai
-openai
+torch
+torchvision
+torchaudio
+google-generativeai==0.7.2
+openai==0.28.1
 requests
 typing-extensions
+protobuf
+grpcio
