--- a/requirements_streamlit_cloud.txt
+++ b/requirements_streamlit_cloud.txt
@@ -1,14 +1,8 @@
 # Streamlit Cloud 专用依赖配置文件
-# 针对云部署环境优化，确保所有依赖都能正确安装
+# 确保AI模块正确安装
 
 # 核心框架
 streamlit>=1.28.0
-
-# PyTorch CPU版本 (适配Streamlit Cloud)
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
-torchaudio==2.0.2+cpu
---find-links https://download.pytorch.org/whl/torch_stable.html
 
 # 数据处理和机器学习
 numpy>=1.24.0
@@ -16,12 +10,20 @@ pandas>=2.0.0
 scikit-learn>=1.3.0
 joblib>=1.3.0
 
-# AI服务提供商
-google-generativeai>=0.7.0
-openai>=0.28.0
+# PyTorch CPU版本 (Streamlit Cloud兼容)
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
+--find-links https://download.pytorch.org/whl/torch_stable.html
+
+# AI服务提供商 - 使用更稳定的版本
+google-generativeai==0.7.2
+openai==0.28.1
 
 # 网络请求
 requests>=2.31.0
 
-# 其他必要依赖
+# 必要依赖
 typing-extensions>=4.0.0
+protobuf>=3.20.0
+grpcio>=1.50.0
