--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
+# Streamlit Cloud 优化配置
+# 移除可能导致部署失败的复杂配置
+
 streamlit
-pandas
-torch
-scikit-learn
 numpy
-langchain
-langchain-community
-ollama
+pandas
+scikit-learn
+joblib
+
+# PyTorch - 使用默认CPU版本
+torch
+torchvision
+torchaudio
+
+# AI服务提供商 - 稳定版本
+google-generativeai==0.7.2
+openai==0.28.1
+
+# 基础依赖
+requests
+typing-extensions
+protobuf
+grpcio
